--- a/src/styles/pages/landing.css
+++ b/src/styles/pages/landing.css
@@ -15,7 +15,7 @@
     max-width: 1100px;
 
     height: 100%;
-    max-width: 680px;
+    max-height: 680px;
 
     display: flex;
     align-items: flex-start;
